@startuml
title Class Diagram for FindItemByKeywordCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class FindItemParser {
  + parse(input: String)
}

class FindItemByKeywordCommand {
  - keywordInput: String
  + execute(inventory: Inventory, ui: UI)
}

class Inventory {
  + getCategories()
}

class Category {
  - name: String
}

class Item {
  - name: String
  - quantity: int
}

class UI {
  + formatNoItemsFoundMessage(...)
  + formatFoundItemsMessage(...)
  + formatFindResultsHeader(...)
  + showMessage(...)
  + showNumberedList(...)
  + showDivider()
  + showError(...)
}

Command <|-- FindItemByKeywordCommand
FindItemParser ..> FindItemByKeywordCommand : creates
FindItemByKeywordCommand --> Inventory : scans
FindItemByKeywordCommand --> UI : displays through
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml
